# sigaid

./: .gitignore  Dockerfile  LICENSE  README.md  amplify.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
authority/: __init__.py  config.py  database.py  logging.py  main.py
authority/alembic/: env.py
authority/alembic/versions/: 001_initial_schema.py  002_add_revocation.py
authority/middleware/: __init__.py  rate_limit.py
authority/models/: __init__.py  agent.py  api_key.py  lease.py  reputation.py  revocation.py  state.py
authority/routers/: __init__.py
authority/schemas/: __init__.py
authority/services/: __init__.py  crypto.py  revocation.py  tokens.py
demos/: agent_face_demo.py  authority_integration.py  basic_usage.py  clone_rejection.py  face_gallery.html  face_gallery_v4.html  face_gallery_v5.html  framework_integration.py  profile_gallery.html  profile_liveness_demo.py  state_chain.py  verification.py
docs/: API.md
sdk/faces/: README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
sdk/faces/src/: AgentFace.ts  constants.ts  index.ts  types.ts
sdk/js/: README.md  package.json  rollup.config.js  tsconfig.json
sdk/js/src/: widget.ts
sigaid/: __init__.py  constants.py  exceptions.py  logging.py  utils.py  version.py
sigaid/client/: __init__.py  agent.py  authority.py  http.py  retry.py
sigaid/crypto/: __init__.py  hashing.py  hybrid.py  keys.py  secure_memory.py  signing.py  state_encryption.py  tokens.py
sigaid/crypto/hsm/: __init__.py  interface.py  pkcs11.py  software.py
sigaid/identity/: __init__.py  agent_face.py  agent_id.py  agent_profile.py  keypair.py  storage.py
sigaid/integrations/: __init__.py  autogen.py  base.py  crewai.py  detect.py  langchain.py  openai_agents.py
sigaid/lease/: __init__.py  heartbeat.py  manager.py
sigaid/models/: __init__.py  agent.py  lease.py  proof.py  state.py
sigaid/state/: __init__.py  chain.py  merkle.py  verification.py
sigaid/verification/: __init__.py  liveness.py  prover.py  verifier.py
tests/: __init__.py  conftest.py  test_crypto.py  test_edge_cases.py  test_integration.py
tests/authority/: __init__.py  test_config.py  test_rate_limit.py  test_revocation.py  test_tokens.py
tests/crypto/: __init__.py  test_hashing.py  test_hsm.py  test_hybrid.py  test_keys.py  test_secure_memory.py  test_state_encryption.py  test_tokens.py
tests/identity/: __init__.py  test_agent_id.py
tests/integration/: test_full_flow.py
tests/state/: __init__.py  test_chain.py  test_merkle.py  test_verification.py
website/: next.config.js  package-lock.json  package.json  tailwind.config.ts
website/app/: globals.css  layout.tsx  page.tsx
website/app/dashboard/: layout.tsx  page.tsx
website/app/dashboard/agents/: page.tsx
website/app/dashboard/api-keys/: page.tsx
website/app/docs/: layout.tsx  page.tsx
website/app/docs/api/: page.tsx
website/app/docs/concepts/identity/: page.tsx
website/app/docs/concepts/leasing/: page.tsx
website/app/docs/concepts/state-chain/: page.tsx
website/app/docs/concepts/verification/: page.tsx
website/app/docs/installation/: page.tsx
website/app/docs/quickstart/: page.tsx
website/app/login/: page.tsx
website/app/playground/: page.tsx
website/app/signup/: page.tsx
website/components/docs/: DocsSidebar.tsx
website/components/landing/: CodeExamples.tsx  Footer.tsx  Header.tsx  Hero.tsx  Pricing.tsx  Problem.tsx  Security.tsx  Solution.tsx  UseCases.tsx  index.ts
website/components/ui/: badge.tsx  button.tsx
