[project]
name = "sigaid"
version = "0.1.0"
description = "Cryptographically secure agent identity protocol with exclusive leasing, state continuity, and verification"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SigAid Team"}
]
keywords = ["agent", "identity", "cryptography", "verification", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "cryptography>=42.0.0",
    "blake3>=0.4.0",
    "pyseto>=1.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "base58>=2.1.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
]
crewai = [
    "crewai>=0.1.0",
]
autogen = [
    "pyautogen>=0.2.0",
]
all-integrations = [
    "sigaid[langchain]",
    "sigaid[crewai]",
    "sigaid[autogen]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.urls]
Homepage = "https://sigaid.com"
Documentation = "https://docs.sigaid.com"
Repository = "https://github.com/trustorno/sigaid"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sigaid"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=sigaid --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
